Mess with some templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,12 @@
 
 <head>
     <link rel="stylesheet" href="/static/style.css" />
+    <title>piCture clock!</title>
 </head>
 
 <body>
-    <h1>My Website</h1>
+    <h1>Welcome to the picture clock</h1>
+    <h2>Features to be added soon!</h2>
 </body>
 
 </html>
